# pico-projekti-k24

./: .gitignore  CMakeLists.txt  dht20_handler.c  dht20_handler.h  hello.c  httptest.c  lcd_handler.c  lcd_handler.h  lcd_test.c  main.c  test.c  web_handler.c  web_handler.h
